@@ -21,10 +21,10 @@ package org.apache.cassandra.stress.operations;
  */
 
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
+import org.apache.cassandra.stress.generate.*;
+import org.apache.cassandra.stress.util.Timing;
 import org.apache.commons.math3.distribution.EnumeratedDistribution;
 import org.apache.commons.math3.util.Pair;
 
@@ -36,49 +36,59 @@ import org.apache.cassandra.stress.util.Timer;
 public abstract class SampledOpDistributionFactory<T> implements OpDistributionFactory
 {
 
-    final List<Pair<T, Double>> ratios;
+    final Map<T, Double> ratios;
     final DistributionFactory clustering;
-    protected SampledOpDistributionFactory(List<Pair<T, Double>> ratios, DistributionFactory clustering)
+    protected SampledOpDistributionFactory(Map<T, Double> ratios, DistributionFactory clustering)
     {
         this.ratios = ratios;
         this.clustering = clustering;
     }
 
-    protected abstract Operation get(Timer timer, PartitionGenerator generator, T key);
+    protected abstract List<? extends Operation> get(Timer timer, PartitionGenerator generator, T key);
     protected abstract PartitionGenerator newGenerator();
 
-    public OpDistribution get(Timer timer)
+    public OpDistribution get(Timing timing, int sampleCount)
     {
         PartitionGenerator generator = newGenerator();
         List<Pair<Operation, Double>> operations = new ArrayList<>();
-        for (Pair<T, Double> ratio : ratios)
-            operations.add(new Pair<>(get(timer, generator, ratio.getFirst()), ratio.getSecond()));
+        for (Map.Entry<T, Double> ratio : ratios.entrySet())
+        {
+            List<? extends Operation> ops = get(timing.newTimer(ratio.getKey().toString(), sampleCount), generator, ratio.getKey());
+            for (Operation op : ops)
+                operations.add(new Pair<>(op, ratio.getValue() / ops.size()));
+        }
         return new SampledOpDistribution(new EnumeratedDistribution<>(operations), clustering.get());
     }
 
     public String desc()
     {
         List<T> keys = new ArrayList<>();
-        for (Pair<T, Double> p : ratios)
-            keys.add(p.getFirst());
+        for (Map.Entry<T, Double> ratio : ratios.entrySet())
+            keys.add(ratio.getKey());
         return keys.toString();
     }
 
     public Iterable<OpDistributionFactory> each()
     {
         List<OpDistributionFactory> out = new ArrayList<>();
-        for (final Pair<T, Double> ratio : ratios)
+        for (final Map.Entry<T, Double> ratio : ratios.entrySet())
         {
             out.add(new OpDistributionFactory()
             {
-                public OpDistribution get(Timer timer)
+                public OpDistribution get(Timing timing, int sampleCount)
                 {
-                    return new FixedOpDistribution(SampledOpDistributionFactory.this.get(timer, newGenerator(), ratio.getFirst()));
+                    List<? extends Operation> ops = SampledOpDistributionFactory.this.get(timing.newTimer(ratio.getKey().toString(), sampleCount), newGenerator(), ratio.getKey());
+                    if (ops.size() == 1)
+                        return new FixedOpDistribution(ops.get(0));
+                    List<Pair<Operation, Double>> ratios = new ArrayList<>();
+                    for (Operation op : ops)
+                        ratios.add(new Pair<>(op, 1d / ops.size()));
+                    return new SampledOpDistribution(new EnumeratedDistribution<Operation>(ratios), new DistributionFixed(1));
                 }
 
                 public String desc()
                 {
-                    return ratio.getFirst().toString();
+                    return ratio.getKey().toString();
                 }
 
                 public Iterable<OpDistributionFactory> each()
